# src/config/swagger.json
@@ -109,14 +109,14 @@
           {
             "name": "DeliveryDate",
             "in": "query",
-            "description": "The date for the new invoice to be delivered on.",
+            "description": "The date the order is to be delivered on.",
             "required": true,
             "type": "string"
           },
           {
             "name": "NextInID",
             "in": "query",
-            "description": "The date for the new invoice to be delivered on.",
+            "description": "The ID of the invoice that this invoice replaces/updates.",
             "required": false,
             "type": "number"
           }
@@ -163,6 +163,78 @@
             "name": "Name",
             "in": "query",
             "description": "Specifies the Entity Name",
+            "required": true,
+            "type": "string"
+          }
+        ]
+      }
+    },
+    "/order": {
+      "get":  {
+        "tags": ["Order Endpoints"],
+        "summary": "Returns an order with the matching OrderID",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "No orders found"
+          },
+          "400": {
+            "description": "Bad request or multiple orders found"
+          }
+        },
+        "parameters": [
+          {
+            "name": "OID",
+            "in": "query",
+            "description": "Specifies the Order ID",
+            "required": true,
+            "type": "integer"
+          }
+        ]
+      },
+      "put": {
+        "tags": ["Order Endpoints"],
+        "summary": "Inserts a new order into the database.",
+        "responses": {
+          "200": {
+            "description": "This is the ID of the newly created order."
+          }
+        },
+        "parameters": [
+          {
+            "name": "SID",
+            "in": "query",
+            "description": "The ID of the seller.",
+            "required": true,
+            "type": "number"
+          },
+          {
+            "name": "CID",
+            "in": "query",
+            "description": "The ID of the customer.",
+            "required": true,
+            "type": "number"
+          },
+          {
+            "name": "DID",
+            "in": "query",
+            "description": "The ID of the driver.",
+            "required": true,
+            "type": "number"
+          },
+          {
+            "name": "OrderDate",
+            "in": "query",
+            "description": "The date the order was placed.",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "DeliveryDate",
+            "in": "query",
+            "description": "The date for the new order to be delivered on.",
             "required": true,
             "type": "string"
           }
