# src/services/Order/routes.ts
@@ -1,0 +1,48 @@
+/** Defines the routes and endpoints available for orders. */
+
+import { Request, Response } from "express";
+import {IRoute} from "..";
+import {order} from "../../utils/dbTypes";
+import {
+    checkOrderByOrderIDGetQueryParams,
+    checkOrderSetQueryParams,
+    getOrder,
+    setOrder,
+} from "./QueryController";
+
+export default [
+    {
+        handler: [
+            checkOrderSetQueryParams,
+            async (req: Request, res: Response) => {
+                const ord: order = {
+                    OID: -1,
+                    InID: 1,
+                    SID: req.query.SID,
+                    CID: req.query.CID,
+                    DID: req.query.DID,
+                    OrderDate: new Date(Date.parse(req.query.OrderDate)),
+                };
+                const result = await setOrder(ord, new Date(Date.parse(req.query.DeliveryDate)));
+                // TODO Either find the InID to be passed into InID above, or created and changed in the setOrder
+                // function... Should be able to do this by calling the Invoice endpoint?
+                res.status(200).send(result);
+                return result;
+            },
+        ],
+        method: "put",
+        path: "/api/v1/order",
+    },
+    {
+        handler: [
+            checkOrderByOrderIDGetQueryParams,
+            async (req: Request, res: Response) => {
+                const result = await getOrder(req.query.OID);
+                res.status(200).send(result);
+                return result;
+            },
+        ],
+        method: "get",
+        path: "/api/v1/order",
+    },
+] as IRoute[];
